
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int led_event_t ;


 int GPIO_GREEN_LED ;
 int GPIO_RED_LED ;
 int LED_STATE_CLAIMED ;
 int LED_STATE_ENABLED ;
 int hw_led_state ;
 int led_state ;


 int leds_lock ;
 int nw_gpio_lock ;
 int nw_gpio_modify_op (int,int) ;
 int spin_lock_irqsave (int *,unsigned long) ;
 int spin_unlock_irqrestore (int *,unsigned long) ;

__attribute__((used)) static void netwinder_leds_event(led_event_t evt)
{
 unsigned long flags;

 spin_lock_irqsave(&leds_lock, flags);

 switch (evt) {
 case 130:
  led_state |= LED_STATE_ENABLED;
  hw_led_state = GPIO_GREEN_LED;
  break;

 case 129:
  led_state &= ~LED_STATE_ENABLED;
  break;

 case 139:
  led_state |= LED_STATE_CLAIMED;
  hw_led_state = 0;
  break;

 case 131:
  led_state &= ~LED_STATE_CLAIMED;
  hw_led_state = 0;
  break;
 case 136:
  if (!(led_state & LED_STATE_CLAIMED))
   hw_led_state |= GPIO_RED_LED;
  break;

 case 137:
  if (led_state & LED_STATE_CLAIMED)
   hw_led_state |= GPIO_GREEN_LED;
  break;

 case 138:
  if (led_state & LED_STATE_CLAIMED)
   hw_led_state &= ~GPIO_GREEN_LED;
  break;

 case 140:
  if (led_state & LED_STATE_CLAIMED)
   hw_led_state |= GPIO_GREEN_LED | GPIO_RED_LED;
  break;

 case 141:
  if (led_state & LED_STATE_CLAIMED)
   hw_led_state &= ~(GPIO_GREEN_LED | GPIO_RED_LED);
  break;

 case 132:
  if (led_state & LED_STATE_CLAIMED)
   hw_led_state |= GPIO_RED_LED;
  break;

 case 133:
  if (led_state & LED_STATE_CLAIMED)
   hw_led_state &= ~GPIO_RED_LED;
  break;

 default:
  break;
 }

 spin_unlock_irqrestore(&leds_lock, flags);

 if (led_state & LED_STATE_ENABLED) {
  spin_lock_irqsave(&nw_gpio_lock, flags);
  nw_gpio_modify_op(GPIO_RED_LED | GPIO_GREEN_LED, hw_led_state);
  spin_unlock_irqrestore(&nw_gpio_lock, flags);
 }
}
